--- a/szabalyozok/templates/szabalyozok/riport_layout.html
+++ b/szabalyozok/templates/szabalyozok/riport_layout.html
@@ -35,6 +35,7 @@
                         <li role="separator" class="divider"></li>
                     </ul>
                 </li>
+                {% if user.is_authenticated %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Riportok<span class="caret"></span></a>
@@ -47,6 +48,7 @@
                         <li><a href="{% url 'riport_muszermunkak' %}">Műszer munkák</a></li>
                     </ul>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
