--- a/szabalyozok/templates/szabalyozok/riport_szabalyozok.html
+++ b/szabalyozok/templates/szabalyozok/riport_szabalyozok.html
@@ -17,10 +17,12 @@
         <th>Üzem</th>
         <th>Átadó</th>
         <th>Település</th>
+        <th>HRSZ</th>
         <th>Település kód</th>
         <th>Telepítés éve</th>
         <th>Aktív</th>
         <th>Szabályozó gyártó</th>
+        <th>Szabályozó karbantartó</th>
         <th>Kivitel</th>
         <th>Elhelyezés</th>
         <th>Funkció</th>
@@ -42,6 +44,13 @@
         <th>10 éves karb</th>
         <th>Elláttott települések</th>
         <th>Összedolgozó szabályzók</th>
+        <th>Összes terület</th>
+        <th>Füves terület</th>
+        <th>Burkolt terület</th>
+        <th>Ellenőrzési ciklus</th>
+        <th>GPS lat</th>
+        <th>GPS long</th>
+        <th>Megjegyzés</th>
     </tr>
     </thead>
     <tfoot>
@@ -57,10 +66,12 @@
         <th>Üzem</th>
         <th>Átadó</th>
         <th>Település</th>
+        <th>HRSZ</th>
         <th>Település kód</th>
         <th>Telepítés éve</th>
         <th>Aktív</th>
         <th>Szabályozó gyártó</th>
+        <th>Szabályozó karbantartó</th>
         <th>Kivitel</th>
         <th>Elhelyezés</th>
         <th>Funkció</th>
@@ -82,6 +93,13 @@
         <th>10 éves karb</th>
         <th>Elláttott települések</th>
         <th>Összedolgozó szabályzók</th>
+        <th>Összes terület</th>
+        <th>Füves terület</th>
+        <th>Burkolt terület</th>
+        <th>Ellenőrzési ciklus</th>
+        <th>GPS lat</th>
+        <th>GPS long</th>
+        <th>Megjegyzés</th>
     </tr>
     </tfoot>
     <tbody>
@@ -98,10 +116,12 @@
         <td>{{ szab.telepules.uzem }}</td>
         <td>{{ szab.atado }}</td>
         <td>{{ szab.telepules }}</td>
+        <td>{{ szab.hrsz }}</td>
         <td>{{ szab.telepules.telepules_kod }}</td>
         <td>{{ szab.telepites_ev }}</td>
         <td>{% if szab.aktiv %}igen{% else %}nem{% endif %}</td>
-        <td>{{ szab.szabalyozogyarto }}</td>
+        <td>{{ szab.szabgyarto }}</td>
+        <td>{{ szab.szabkarb }}</td>
         <td>{{ szab.kivitel }}</td>
         <td>{{ szab.elhelyezes }}</td>
         <td>{{ szab.funkcio }}</td>
@@ -109,8 +129,10 @@
         <td>{{ szab.tulajdonos }}</td>
         <td>{{ szab.nev_prim_nyom }}</td>
         <td>{{ szab.nev_sek_nyom }}</td>
+
         <td>{{ szab.uz_prim_nyom }}</td>
         <td>{{ szab.uz_sek_nyom }}</td>
+
         <td>{{ szab.nev_kapacitas }}</td>
         <td>{% if szab.nyom_din_rendszer %}igen{% else %}nem{% endif %}</td>
         <td>{% if szab.futott %}igen{% else %}nem{% endif %}</td>
@@ -126,6 +148,13 @@
             {% endfor %}
         </td>
         <td>{{ szab.osszedolg_szab }}</td>
+        <td>{{ szab.ossz_terulet }}</td>
+        <td>{{ szab.fuves_terulet }}</td>
+        <td>{{ szab.burkolt_terulet }}</td>
+        <td>{{ szab.ellenorzesiciklus }}</td>
+        <td>{{ szab.gps_lat }}</td>
+        <td>{{ szab.gps_long }}</td>
+        <td>{{ szab.megjegyzes }}</td>
     </tr>
     {% endfor %}
     </tbody>
