--- a/szabalyozok/static/szabalyozok/content/style.css
+++ b/szabalyozok/static/szabalyozok/content/style.css
@@ -25,3 +25,15 @@ tfoot {
     font-weight: bold;
     background-color: #b7c6ff;
 }
+
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(/static/szabalyozok/image/spinner.gif) center no-repeat #fff;
+}
