--- a/szabalyozok/templates/szabalyozok/diagnosztika.html
+++ b/szabalyozok/templates/szabalyozok/diagnosztika.html
@@ -14,7 +14,7 @@
     <h3 class="text-left">{{ szabnev }} diagnosztika (Bar)</h3>    <br>
     <p>
         {% if user.is_authenticated %}
-            <button type="button" class="btn btn-primary" onclick="window.location.href='{% url 'diagnosztika_new' pk=szabid %}'">Új diagnosztika</button>
+            <button type="button" class="btn btn-success" onclick="window.location.href='{% url 'diagnosztika_new' pk=szabid %}'">Új diagnosztika</button>
             <button type="button" class="btn btn-default" onclick="window.location.href='{% url 'diagnosztika_tortenet' pk=szabid %}'">Történetiség</button>
         {% endif %}
     </p>
