--- a/szabalyozok/templates/szabalyozok/kep_list.html
+++ b/szabalyozok/templates/szabalyozok/kep_list.html
@@ -5,13 +5,17 @@
     <li role="presentation"><a href="{% url 'szabalyozo_show' pk=szabid %}">Alapadatok</a></li>
     <li role="presentation"><a href="{% url 'szabtart_show' pk=szabid %}">Tartozékok</a></li>
     <li role="presentation"><a href="{% url 'diagnosztika' pk=szabid %}">Diagnosztika</a></li>
-    <li role="presentation"><a href="{% url 'szabmunka_show' pk=szabid %}">Szab. munkavégzés</a></li>
+    {% if user.is_authenticated %}
+        <li role="presentation"><a href="{% url 'szabmunka_show' pk=szabid %}">Szab. munkavégzés</a></li>
+    {% endif %}
 </ul>
 <div class="col-md-6">
     <h3> {{ szabnev }} képek</h3>
     <br>
     <p>
+        {% if user.is_authenticated %}
             <button type="button" class="btn btn-success" onclick="window.location.href='{% url 'kep_new' spk=szabid %}'">Új kép feltöltése</button>
+        {% endif %}
     <br>
     </p>
         <table class="table table-condensed" style="margin-left:40px">
