--- a/szabalyozok/templates/szabalyozok/riport_muszerek.html
+++ b/szabalyozok/templates/szabalyozok/riport_muszerek.html
@@ -1,6 +1,7 @@
 {% extends "szabalyozok/riport_layout.html" %}
 
 {% block content %}
+
 <h1>Műszerek</h1>
     <br>
 
@@ -66,10 +67,9 @@
                     <td> {% if muszer.muszerfajta.id == 1 %} <a href="{% url 'manometer_edit' pk=muszer.id %}">Szerkeszt</a> {% endif %} </td>
                     <td> {% if muszer.selejt  %}Igen{% else %}Nem{% endif %}</td>
                     <td>{{ muszer.muszerfajta }}</td>
-                    <td>{{ muszer.muszerfajta }}</td>
-                    <td>{{ muszer.muszerfajta }}</td>
-                    <td>{{ muszer.muszerfajta }}</td>
-
+                    <td>{% if muszer.szabalyozo %}{{ muszer.szabalyozo.telepules.uzem.terulet }}{% endif %}</td>
+                    <td>{% if muszer.szabalyozo %}{{ muszer.szabalyozo.telepules.uzem }}{% endif %}</td>
+                    <td>{% if muszer.szabalyozo %}{{ muszer.szabalyozo.telepules }}{% endif %}</td>
                     <td>{{ muszer.muszergyarto }}</td>
                     <td>{{ muszer.muszertipus }}</td>
                     <td>{{ muszer.elhelyezkedes }}</td>
