--- a/szabalyozok/templates/szabalyozok/diagnosztika_new.html
+++ b/szabalyozok/templates/szabalyozok/diagnosztika_new.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-<h3 style="margin-left:40px;">Új diagnosztika létrehozása</h3><br>
+<h3 style="margin-left:40px;">Új beszabályozás létrehozása (bar)</h3><br>
 
-<div style="margin-left:40px;" class="col-md-4">
+<div style="margin-left:40px;" class="col-md-6">
     {% load bootstrap3 %}
     <form method="POST" class="form-horizontal" role="form">
         {% csrf_token %}
