--- a/szabalyozok/templates/szabalyozok/doc_list.html
+++ b/szabalyozok/templates/szabalyozok/doc_list.html
@@ -4,7 +4,7 @@
 <ul class="nav nav-tabs">
     <li role="presentation"><a href="{% url 'szabalyozo_show' pk=szabid %}">Alapadatok</a></li>
     <li role="presentation"><a href="{% url 'szabtart_show' pk=szabid %}">Tartozékok</a></li>
-    <li role="presentation"><a href="{% url 'diagnosztika' pk=szabid %}">Diagnosztika</a></li>
+    <li role="presentation"><a href="{% url 'diagnosztika' pk=szabid %}">Beszabályozás</a></li>
     <li role="presentation"><a href="{% url 'szabmunka_show' pk=szabid %}">Szab. munkavégzés</a></li>
 </ul>
 <div class="col-md-6">
