--- a/szabalyozok/templates/szabalyozok/riport_diagnosztikak.html
+++ b/szabalyozok/templates/szabalyozok/riport_diagnosztikak.html
@@ -1,7 +1,7 @@
 {% extends "szabalyozok/riport_layout.html" %}
 
 {% block content %}
-<h1>Szabályozó diagnosztikák</h1>
+<h1>Szabályozó beszabályozások (bar)</h1>
 
 <table id="riport" class="table table-bordered" cellspacing="0" width="100%">
     <thead>
