--- a/szabalyozok/templates/szabalyozok/diagnosztika.html
+++ b/szabalyozok/templates/szabalyozok/diagnosztika.html
@@ -4,17 +4,17 @@
 <ul class="nav nav-tabs">
     <li role="presentation"><a href="{% url 'szabalyozo_show' pk=szabid %}">Alapadatok</a></li>
     <li role="presentation"><a href="{% url 'szabtart_show' pk=szabid %}">Tartozékok</a></li>
-    <li role="presentation" class="active"><a href="#">Diagnosztika</a></li>
+    <li role="presentation" class="active"><a href="#">Beszabályozás</a></li>
     {% if user.is_authenticated %}
         <li role="presentation"><a href="{% url 'szabmunka_show' pk=szabid %}">Szab. munkavégzés</a></li>
     {% endif %}
 </ul>
 
 <div class="col-md-10">
-    <h3 class="text-left">{{ szabnev }} diagnosztika (Bar)</h3>    <br>
+    <h3 class="text-left">{{ szabnev }} beszabályozás (bar)</h3>    <br>
     <p>
         {% if user.is_authenticated %}
-            <button type="button" class="btn btn-success" onclick="window.location.href='{% url 'diagnosztika_new' pk=szabid %}'">Új diagnosztika</button>
+            <button type="button" class="btn btn-success" onclick="window.location.href='{% url 'diagnosztika_new' pk=szabid %}'">Új beszabályozás</button>
             <button type="button" class="btn btn-default" onclick="window.location.href='{% url 'diagnosztika_tortenet' pk=szabid %}'">Történetiség</button>
         {% endif %}
     </p>
