--- a/szabalyozok/templates/szabalyozok/diagnosztika_tortenet.html
+++ b/szabalyozok/templates/szabalyozok/diagnosztika_tortenet.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-md-10">
-    <h3 class="text-left">{{ szabnev }} diagnosztika történet (Bar)</h3>    <br>
+    <h3 class="text-left">{{ szabnev }} beszabályozás történet (bar, utolsó 15 bejegyzés)</h3>    <br>
     <table class="table table-striped table-bordered">
         <thead>
         <tr>
