--- a/szabalyozok/templates/szabalyozok/muszer_tortenet.html
+++ b/szabalyozok/templates/szabalyozok/muszer_tortenet.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-md-12">
-    <h3 class="text-left">{{ szabnev }} műszer archívum</h3>    <br>
+    <h3 class="text-left">{{ szabnev }} műszer archívum (utolsó 15 bejegyzés)</h3>    <br>
 
     <table class="table table-striped table-bordered">
         <thead>
