--- a/szabalyozok/templates/szabalyozok/riport_szabtartozekok.html
+++ b/szabalyozok/templates/szabalyozok/riport_szabtartozekok.html
@@ -27,8 +27,8 @@
     {% for szabtartozek in szabtartozekok %}
     <tr>
         <td>{% if szabtartozek.szabalyozo %} <a href="{% url 'szabtart_show' pk=szabtartozek.szabalyozo.id %}">{{ szabtartozek.szabalyozo }}</a> {% endif %}</td>
-        <td>{{ szabtartozek.tartozekfajta }}</td>
-        <td>{{ szabtartozek.tartozekgyarto }}</td>
+        <td>{{ szabtartozek.tartozektipus.tartozekfajta }}</td>
+        <td>{{ szabtartozek.tartozektipus.tartozekgyarto }}</td>
         <td>{{ szabtartozek.tartozektipus }}</td>
         <td>{{ szabtartozek.beszereles_datum }}</td>
         <th>{{ szabtartozek.megjegyzes }}</th>
