--- a/szabalyozok/templates/szabalyozok/szabalyozo_show.html
+++ b/szabalyozok/templates/szabalyozok/szabalyozo_show.html
@@ -4,13 +4,34 @@
 <ul class="nav nav-tabs">
     <li role="presentation" class="active"><a href="#">Alapadatok</a></li>
     <li role="presentation"><a href="{% url 'szabtart_show' pk=szabalyozo.id%}">Tartozékok</a></li>
-    <li role="presentation"><a href="{% url 'diagnosztika' pk=szabalyozo.id %}">Diagnosztika</a></li>
+    <li role="presentation"><a href="{% url 'diagnosztika' pk=szabalyozo.id %}">Beszabályozás</a></li>
     {% if user.is_authenticated %}
         <li role="presentation"><a href="{% url 'szabmunka_show' pk=szabalyozo.id %}">Szab. munkavégzés</a></li>
     {% endif %}
-</ul>
-<br>
-<div class="col-md-2">
+</ul><p></p>
+    <div align="center">
+        <button type="button" class="btn btn-info" onclick="window.location.href='{% url 'szabalyozok' %}'">Vissza a
+            szabályozó listához
+        </button>
+
+        {% if user.is_authenticated %}
+        <button type="button" class="btn btn-primary"
+                onclick="window.location.href='{% url 'szabalyozo_edit' pk=szabalyozo.id %}'">Szabályozó módosítása
+        </button>
+        {% endif %}
+
+        {% if user.is_authenticated %}
+        <button type="button" class="btn btn-warning" onclick="window.location.href='{% url 'doc_list' tip='szab' eszid=szabalyozo.id spk=szabalyozo.id %}'">Dokumentumok</button>
+        {% endif %}
+
+        <button style="background-color: #64c757" type="button" class="btn btn-primary" onclick="window.location.href='{% url 'kep_list' spk=szabalyozo.id %}'">Fényképek</button>
+
+        <button style="background-color: #f25294" type="button" class="btn btn-primary"
+                onclick="window.open('{% url 'szabterkep' pk=szabalyozo.id %}')">Térkép
+        </button>
+    </div>
+<p></p>
+<div class="col-md-3">
     <div class="panel panel-default">
         <div class="panel-heading">Azonosítók</div>
         <div class="panel-body">
@@ -77,7 +98,7 @@
 
 </div>
 
-<div class="col-md-2">
+<div class="col-md-3">
     <div class="panel panel-default">
         <div class="panel-heading">Elhelyezkedés</div>
         <div class="panel-body">
@@ -144,19 +165,19 @@
             </div>
             <div class="form-group">
                 <label for="ossz_terulet">
-                    Összes terület
+                    Összes terület (m2)
                 </label>
                 <input class="form-control" id="ossz_terulet" value="{% if szabalyozo.ossz_terulet %} {{ szabalyozo.ossz_terulet }} {% endif %} " readonly type="text">
             </div>
             <div class="form-group">
                 <label for="fuves_terulet">
-                    Füves terület
+                    Füves terület (m2)
                 </label>
                 <input class="form-control" id="fuves_terulet" value="{% if szabalyozo.fuves_terulet %} {{ szabalyozo.fuves_terulet }} {% endif %} " readonly type="text">
             </div>
             <div class="form-group">
                 <label for="burkolt_terulet">
-                    Burkolt terület
+                    Burkolt terület (m2)
                 </label>
                 <input class="form-control" id="burkolt_terulet" value="{% if szabalyozo.burkolt_terulet %} {{ szabalyozo.burkolt_terulet }} {% endif %} " readonly type="text">
             </div>
@@ -170,7 +191,7 @@
     </div>
 </div>
 
-<div class="col-md-2">
+<div class="col-md-3">
     <div class="panel panel-default">
         <div class="panel-heading">Adatok</div>
         <div class="panel-body">
@@ -181,7 +202,7 @@
                        readonly type="text">
             </div>
             <div class="form-group">
-                <label for="szabalyozogyarto">Szabályozó gyártó besorolás</label>
+                <label for="szabalyozogyarto">Állomás gyártó besorolás</label>
                 <input class="form-control" id="szabalyozogyarto" value="{{ szabalyozo.szabgyarto }}" readonly
                        type="text">
             </div>
@@ -203,13 +224,13 @@
             </div>
 
             <div class="form-group">
-                <label for="allomas">Tulajdonjog</label>
+                <label for="allomas">Berendezés tulajdonjoga</label>
                 <input class="form-control" id="allomas" value="{% if szabalyozo.tulajdonjog == 'dso' %}Tigáz DSO{% elif szabalyozo.tulajdonjog == 'zrt' %}Tigáz Zrt.{% elif szabalyozo.tulajdonjog == 'idegen'%}Idegen{% endif %}" readonly type="text">
             </div>
 
             <div class="form-group">
                 <label for="tulajdonos">
-                    Tulajdonos
+                    Berendezés tulajdonosa
                 </label>
                 <input class="form-control" id="tulajdonos" value="{% if szabalyozo.tulajdonos %}{{ szabalyozo.tulajdonos }}{% endif %}" readonly type="text">
             </div>
@@ -227,7 +248,7 @@
                        readonly type="text">
             </div>
             <div class="form-group">
-                <label for="felugyeleti_rendszer">Felügyeleti rendszer ?</label>
+                <label for="felugyeleti_rendszer">Felügyeleti rend.?</label>
                 <input class="form-control" id="felugyeleti_rendszer"
                        value="{% if szabalyozo.felugyeleti_rendszer %} Igen {% endif %} {% if szabalyozo.felugyeleti_rendszer == False %} Nem {% endif %}"
                        readonly type="text">
@@ -255,14 +276,14 @@
     </div>
 </div>
 
-<div class="col-md-2">
+<div class="col-md-3">
     <div class="panel panel-default">
         <div class="panel-heading">Nyomás, kapacitás adatok</div>
         <div class="panel-body">
 
             <div class="form-group">
                 <label for="nev_prim_nyom">
-                    Névl. prim. nyomás:
+                    Névl. prim. nyomás (bar)
                 </label>
                 <input class="form-control" id="nevlegesprim" value="{{ szabalyozo.nev_prim_nyom }}" readonly
                        type="text">
@@ -270,7 +291,7 @@
 
             <div class="form-group">
                 <label for="nev_sek_nyom">
-                    Névl. szek. nyomás
+                    Névl. szek. nyomás (bar)
                 </label>
                 <input class="form-control" id="nevlegesszek" value="{{ szabalyozo.nev_sek_nyom }}" readonly
                        type="text">
@@ -278,21 +299,21 @@
 
             <div class="form-group">
                 <label for="p1_nyomas">
-                    Üzemi prim. nyomás
+                    Üzemi prim. nyomás (bar)
                 </label>
                 <input class="form-control" id="uzemiprim" value="{{ szabalyozo.uz_prim_nyom }}" readonly type="text">
             </div>
 
             <div class="form-group">
                 <label for="p2_nyomas">
-                    Üzemi szek. nyomás
+                    Üzemi szek. nyomás (bar)
                 </label>
                 <input class="form-control" id="uzemiszek" value="{{ szabalyozo.uz_sek_nyom }}" readonly type="text">
             </div>
 
             <div class="form-group">
                 <label for="nev_kapacitas">
-                    Névleges kapacitás
+                    Névleges kapacitás (m3/h)
                 </label>
                 <input class="form-control" id="nevlegeskapacitas" value="{{ szabalyozo.nev_kapacitas }}" readonly
                        type="text">
@@ -305,7 +326,7 @@
         <div class="panel-body">
             <div class="form-group">
                 <label for="villamvedelem">Villámvédelmi besorolás</label><br>
-                <input class="form-control" id="villamvedelem" value="{% if szabalyozo.villamvedelem == 'norma' %}Norma szerinti{% elif szabalyozo.villamvedelem == 'nem_norma' %}Nem norma szerinti{% endif %} " readonly
+                <input class="form-control" id="villamvedelem" value="{% if szabalyozo.villamvedelem == 'norma-uj' %}Norma szerinti{% elif szabalyozo.villamvedelem == 'nem_norma-regi' %}Nem norma szerinti{% endif %} " readonly
                        type="text">
             </div>
             <div class="form-group">
@@ -332,26 +353,5 @@
             </div>
         </div>
     </div>
-</div>
-<div class="col-md-2">
-    <button type="button" class="btn btn-info" onclick="window.location.href='{% url 'szabalyozok' %}'">Vissza a
-        szabályozó listához
-    </button>
-    <p></p>
-    {% if user.is_authenticated %}
-    <button type="button" class="btn btn-primary"
-            onclick="window.location.href='{% url 'szabalyozo_edit' pk=szabalyozo.id %}'">Szabályozó módosítása
-    </button>
-    {% endif %}
-    <p></p>
-    {% if user.is_authenticated %}
-    <button type="button" class="btn btn-warning" onclick="window.location.href='{% url 'doc_list' tip='szab' eszid=szabalyozo.id spk=szabalyozo.id %}'">Dokumentumok</button>
-    {% endif %}
-    <p></p>
-    <button type="button" class="btn btn-default" onclick="window.location.href='{% url 'kep_list' spk=szabalyozo.id %}'">Fényképek</button>
-    <p></p>
-    <button type="button" class="btn btn-default"
-            onclick="window.open('{% url 'szabterkep' pk=szabalyozo.id %}')">Térkép
-    </button>
 </div>
 {% endblock %}
